--- a/Python/index.html
+++ b/Python/index.html
@@ -4,7 +4,7 @@ title: Python
 ---
 <h2>Python</h2>
 <ul>
-{% for post in site.categories.PYTHON %}
+{% for post in site.categories.python %}
     <li>{{ post.date | date_to_string }} <a href="{{ post.url }}">{{ post.title }}</a></li>
 {% endfor %}
 </ul>
