--- a/Markdown/_posts/2014-10-17-bye-markdown.html
+++ b/Markdown/_posts/2014-10-17-bye-markdown.html
@@ -1,8 +1,14 @@
+---
 layout: post
 title: Goodbye, Markdown page
 tags: Python ITS
 ---
 
+<!DOCTYPE html><html>
+
+<head>
+<meta charset="utf-8">
+<title>help</title>
 <style type="text/css">
 /**
  * prism.js tomorrow night eighties for JavaScript, CoffeeScript, CSS and HTML
@@ -120,7 +126,8 @@ pre[class*="language-"] {
 	color: green;
 }
 </style>
-
+</head>
+<body>
 <h1>MacDown</h1>
 
 <p><img src="http://macdown.uranusjr.com/static/base/img/logo-160.png" alt="MacDown logo"></p>
@@ -373,4 +380,6 @@ MathJax.Hub.Register.StartupHook('End', function () {
 });
 </script>
 <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+</body>
 
+</html>
